pks-nettest-nginx.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: webfront
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
