pks-nettest-deny.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-myapps
  namespace: myapps
spec:
  podSelector: {}
  policyTypes:
  - Ingress
