pks-nettest-np.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: nsx-demo-policy
  namespace: myapps
spec:
  podSelector:
    matchLabels:
      app: db
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: webfront
    ports:
      - protocol: TCP
        port: 80
